refactor: ref player moves part 1

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@pixi/react": "^7.0.3",
     "@pixi/ui": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
@@ -43,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "jest": "^27.5.1"
   }
 }
