--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "^4.9.5",
     "valtio": "^1.10.4",
     "web-vitals": "^2.1.4"
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "eslint-plugin-valtio": "^0.6.2",
     "jest": "^27.5.1"
   }
 }
