--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/react": "^14.0.0",
     "eslint-plugin-valtio": "^0.6.2",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "tailwindcss": "^3.3.1"
   }
 }
