--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react-dom": "^18.0.11",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "tw-elements": "^1.0.0-beta2",
     "typescript": "^4.9.5",
     "valtio": "^1.10.4",
     "web-vitals": "^2.1.4"
