--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
+    "@material-tailwind/react": "^1.4.2",
     "@pixi/react": "^7.0.3",
     "@pixi/ui": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
