--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.4.7",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
